<resources>
    <string name="app_name">Quiz</string>
    <string name="Text1">De Donde es Laurine</string>
    <string name="respuesta1">Una arquitecta Alemana y el amor de Hamza</string>
    <string name="respuesta2">Una artista</string>
    <string name="respuesta3">Una deportista</string>
    <string name="respuesta4">Una futbolista</string>
    <string name="Text2">Cual es la chica la mas Guapa del Mundo?</string>
    <string name="respuesta12">Laurine</string>
    <string name="respuesta22">Angelina Jolie</string>
    <string name="respuesta33">Anna</string>
    <string name="respuesta44">Sabrina</string>
    <string name="Text3">Cual es la comida preferida de Laurine</string>
    <string name="respuesta31">Ensalada</string>
    <string name="respuesta32">Schnitel de Hamza</string>
    <string name="respuesta333">Pasta</string>
    <string name="respuesta34">Pizza</string>


    <string name="Text0">Question 1/3</string>
    <string name="Text01">Question 2/3</string>
    <string name="Text02">Question 3/3</string>

    <string name="Textcorrect">Respuesta correcta</string>
    <string name="Textincorrect">Respuesta incorrecta</string>
    <string name="Textagain">Try Again</string>



</resources>
