<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="Submit"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"
            android:id="@+id/b33"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="67dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/Text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="#000"

            android:id="@+id/textView"
            android:layout_marginBottom="59dp"
            android:layout_above="@+id/r" />

        <TextView
            android:text="@string/Text02"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:id="@+id/textView2" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/r"
            android:layout_marginBottom="98dp"
            android:layout_above="@+id/b33"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp">
            <RadioButton android:id="@+id/r31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/respuesta32"
                />
            <RadioButton android:id="@+id/r32"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/respuesta31"
                />
            <RadioButton android:id="@+id/r33"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:text="@string/respuesta333"
                />
            <RadioButton android:id="@+id/r34"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/respuesta34"
                />
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>